# sentiment-agent

./: README.md  pyproject.toml
mcp-server/: server.py  test_server.py
sentiment_agent/: __main__.py  agent.py  agent_executor.py
